--- a/index.html
+++ b/index.html
@@ -1,55 +1,39 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="es">
 <head>
-  <meta charset="utf-8">
-  <title>Mi primer App</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pagina de Recetas</title>
 </head>
 <body>
-  <header>
-  <h1>Mi Primer App con HTML</h1>      
-</header>
-<nav>
-  <a href="#">Ir a Sección 2</a>
-  <a href="#">Ir a Sección 3</a>
-</nav>
-<Section>
-  <article>
-  <img src="https://www.w3.org/html/logo/badge/html5-badge-h-connectivity-css3-semantics-storage.png" alt="Logo HTML5" width="50%" height="50%">
-</article>
-<article>
- <h1>Ejemplo de listas ordenadas y desordenadas</h1>
- <h3>Lista ordenada con números:</h3>
- <ol>
-   <li>Edificio</li>
-   <li>Casa</li>
-   <li>Estadio</li>
- </ol>
- <h3>Lista ordenada con letras:</h3>
- <ol type="a">
-   <li>Edificio</li>
-   <li>Casa</li>
-   <li>Estadio</li>
- </ol>
- <h3>Lista desordenada</h3>
- <ul>
-   <li>Edificio</li>
-   <li>Casa</li>
-   <li>Estadio</li>
- </ul>
-</article>
-<article>
-<a href="https://developer.mozilla.org/es/docs/Web/HTML/Element/ol">Enlace a la <strong>descripción</strong> 
-  de <em>MDN</em> para listas ordenadas</a>
-</article>
-</Section>
-<aside>
-  <h3>Testimonios</h3>
-  <p>Me gusta mucho esta pagina.</p>
-</aside>
-<footer>
-  <h4>Redes sociales</h4>
-  <a href="#">Facebook</a>
-  <a href="#">Tiwtter</a>
-</footer>
+   <header>
+        <h1 id="inicio">Home</h1>
+   </header> 
+   <nav>
+    <ul>
+        <li>
+            <a href="index.html">HOME</a>
+        </li>
+        <li>
+            <a href="receta.html">RECETA</a>
+        </li>
+        <li>
+            <a href="contacto.html">CONTACTO</a>
+        </li>
+    </ul>
+   </nav>
+   <main>
+
+
+   </main>
+   <footer>
+    <p>
+        @Programacion Web I - 
+        <a href="https://www.unlam.edu.ar" target="_blank">UNLAM</a>
+        <a href="#inicio"> Ir arriba</a>
+    </p>
+
+   </footer>
 </body>
 </html>
